1) Fixed layout issue on home page to fit for different screen size. 2) On footer section, changed "contact" text to "phone"

--- a/angular5-client/src/app/core/footer/footer.component.scss
+++ b/angular5-client/src/app/core/footer/footer.component.scss
@@ -5,7 +5,7 @@
     padding: 25px 35px;
     font-family: Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
     font-size: 15px;
-    min-height: 34px;
+    height: 35px;
     line-height: 20px;
 
     .copy-right {
