--- a/angular5-client/src/app/core/home/home.component.scss
+++ b/angular5-client/src/app/core/home/home.component.scss
@@ -1,24 +1,25 @@
 .main-content {
+    overflow: auto;
 	background-color: #f1f3f9;
     position: absolute;
-    right: 230px;
-    top: 80px;
-    min-height: 300px;
-    min-width: 290;
-    max-width: 480px;
+    right: 13%;
+    top: 12%;
+    width: 36vmax;
+    height: 60vh;
+    max-height: 450px;
     padding: 13px 20px;
     border-radius: 3px;
-}
 
-.section-title {
-    font-size: 24px;
-    font-weight: bold;
-    color: #0e0e10de;
-}
-
-.section-body {
-    margin-top: 10px;
-    font-size: 14px;
+    .section-title {
+        font-size: 24px;
+        font-weight: bold;
+        color: #0e0e10de;
+    }
+    
+    .section-body {
+        margin-top: 10px;
+        font-size: 14px;
+    }
 }
 
 .mat-list-base .mat-list-item, .mat-list-base .mat-list-option {
