--- a/angular5-client/src/styles.scss
+++ b/angular5-client/src/styles.scss
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-body {
-	margin:0px;
+html, body {
+	height: 100%;
+	margin: 0px;
 	display: block;
 	background: #e3e4e9;
     font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
@@ -53,14 +54,13 @@ body {
 
 	.page-main-container-with-sideNavi {
 		background-color: white;
-		margin:15px 50px 10px 50px;
-		min-height:650px;
+		margin:15px 50px 0px 50px;
 		border-radius: 5px;
 		position: relative;
+		height: calc(100% - 15px);
 
 		.main-container {
 			width: 100%;
-			padding-bottom:70px;
 	
 			.content {
 				padding: 30px 35px 30px 35px;
@@ -111,10 +111,13 @@ body {
 CSS for both login and home page
 */
 .home-background {
-	background-image: url("/assets/home_background.jpg"); 
-	background-repeat: no-repeat;
-	min-height: 565px;
-	background-size: 100% 100%;
+	background: url(assets/home_background.jpg) no-repeat center center; 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+	background-size: cover;
+	height: 100%;
+
 }
 
 /* Material customized CSS */
@@ -226,21 +229,35 @@ Customized CSS for header page
 	margin: 0px !important;
 }
 
-$snackbar-color: #f5f5f5;
-.snackbar-success {
-	background:#AABA0A;
-	color: $snackbar-color;
+.cdk-overlay-container {
+	$snackbar-color: #f5f5f5;
+	bottom: 70px !important; // Position it to top of footer so it won't overlap with footer.
+	top: auto; 
 
-	.mat-simple-snackbar-action {
-		color: $snackbar-color;
+	.mat-simple-snackbar {
+		span {
+			white-space: pre-wrap;      /* CSS3 */   
+			white-space: -moz-pre-wrap; /* Firefox */    
+			white-space: -pre-wrap;     /* Opera <7 */   
+			white-space: -o-pre-wrap;   /* Opera 7 */    
+		}
 	}
-}
 
-.snackbar-error {
-	background:#c72121eb;
-	color: $snackbar-color;
-
-	.mat-simple-snackbar-action {
+	.snackbar-success {
+		background:#AABA0A;
 		color: $snackbar-color;
+
+		.mat-simple-snackbar-action {
+			color: $snackbar-color;
+		}
+	}
+
+	.snackbar-error {
+		background:#c72121eb;
+		color: $snackbar-color;
+		
+		.mat-simple-snackbar-action {
+			color: $snackbar-color;
+		}
 	}
 }
